Pre switch to arrow

--- a/html/weekFB.html
+++ b/html/weekFB.html
@@ -3,7 +3,7 @@
 <hr>
 <h3>Import OrgSync</h3>
 <p>
-  <form action="/weekGT" method="POST" class="form-inline">
+  <form action="/weekFB" method="POST" class="form-inline">
     <div class="form-group">
       <label for="sel1">Select Week:</label>
       <select class="form-control" id="sel1" name=weekSel>
