Weekend Graphic Done

--- a/html/home.html
+++ b/html/home.html
@@ -5,6 +5,6 @@
 <p>
   <a class="btn btn-primary" href="#" role="button">Printed Calendar</a>
   <a class="btn btn-primary" href="weekGT" role="button">Week at a Glance</a>
-  <a class="btn btn-primary" href="#" role="button">This Week</a>
-  <a class="btn btn-primary" href="#" role="button">This Weekend</a>
+  <a class="btn btn-primary" href="weekFB" role="button">This Week</a>
+  <a class="btn btn-primary" href="weekend" role="button">This Weekend</a>
 </p>
