--- a/html/template.html
+++ b/html/template.html
@@ -27,7 +27,7 @@
             <li {prt_act}><a href="#">Printed Calendar</a></li>
             <li {GT_act}><a href="weekGT">Week at a Glance</a></li>
             <li {week_act}><a href="weekFB">This Week</a></li>
-            <li {end_act}><a href="#">This Weekend</a></li>
+            <li {end_act}><a href="weekend">This Weekend</a></li>
           </ul>
         </div>
       </div>
