--- a/html/weekend.html
+++ b/html/weekend.html
@@ -1,9 +1,9 @@
-<h1>Week at a Glance</h1>
+<h1>This Weekend @ the GTCC</h1>
 <p>Some desciption I may write later</p>
 <hr>
 <h3>Import OrgSync</h3>
 <p>
-  <form action="/weekGT" method="POST" class="form-inline">
+  <form action="/weekend" method="POST" class="form-inline">
     <div class="form-group">
       <label for="sel1">Select Week:</label>
       <select class="form-control" id="sel1" name=weekSel>
@@ -17,4 +17,4 @@
 </p>
 <hr>
 <p>{accordion}</p>
-<img class="img-responsive" src="/images/{image}" alt="/images/glance.png">
+<img class="img-responsive" src="/images/{image}" alt="/images/weekend.png">
