--- a/html/home.html
+++ b/html/home.html
@@ -1,9 +1,11 @@
 <h1>Catholic Center Calendar Generatior</h1>
-<p>Some desciption I may write later</p>
+<p>This tool is to standardize the Georgia Tech Catholic Center graphics across all of our various PR. It can make the large printed calendar, the week at a glance, and both of the Facebook calendar graphics. All the data is pulled for the CSO master calenedar on OrgSync. An event must be on OrgSync Calendar and listed as public for it to appear here. Make sure OrgSync is accurate before creating any calendars. All the saints days and feast days come from universalis.com.
+
+The created calendar images will be stored in a folder called 'GTCC Calendars' in your pictures folder.</p>
 <hr>
 <h3>Tools</h3>
 <p>
-  <a class="btn btn-primary" href="#" role="button">Printed Calendar</a>
+  <a class="btn btn-primary" href="big_cal" role="button">Printed Calendar</a>
   <a class="btn btn-primary" href="weekGT" role="button">Week at a Glance</a>
   <a class="btn btn-primary" href="weekFB" role="button">This Week</a>
   <a class="btn btn-primary" href="weekend" role="button">This Weekend</a>
