--- a/html/template.html
+++ b/html/template.html
@@ -23,8 +23,8 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li {home_act}><a href="#">Home</a></li>
-            <li {prt_act}><a href="#">Printed Calendar</a></li>
+            <li {home_act}><a href="..">Home</a></li>
+            <li {prt_act}><a href="big_cal">Printed Calendar</a></li>
             <li {GT_act}><a href="weekGT">Week at a Glance</a></li>
             <li {week_act}><a href="weekFB">This Week</a></li>
             <li {end_act}><a href="weekend">This Weekend</a></li>
