Some progress. Saints updated. Event strings printing right.

--- a/html/weekend.html
+++ b/html/weekend.html
@@ -17,4 +17,4 @@
 </p>
 <hr>
 <p>{accordion}</p>
-<img class="img-responsive" src="/images/{image}" alt="/images/weekend.png">
+<img class="img-responsive" src="/images/{image}" alt="/images_temp/weekend.png">
