--- a/html/big_cal.html
+++ b/html/big_cal.html
@@ -9,4 +9,4 @@
 </p>
 <hr>
 <p>{accordion}</p>
-<img class="img-responsive" src="/images/{image}" alt="/images/monthCal.png">
+<img class="img-responsive" src="/images/{image}" alt="/images_temp/monthCal.png">
