--- a/html/weekFB.html
+++ b/html/weekFB.html
@@ -17,4 +17,4 @@
 </p>
 <hr>
 <p>{accordion}</p>
-<img class="img-responsive" src="/images/{image}" alt="/images/week.png">
+<img class="img-responsive" src="/images/{image}" alt="/images_temp/week.png">
