--- a/html/weekGT.html
+++ b/html/weekGT.html
@@ -17,4 +17,4 @@
 </p>
 <hr>
 <p>{accordion}</p>
-<img class="img-responsive" src="/images/{image}" alt="/images/glance.png">
+<img class="img-responsive" src="/images/{image}" alt="/images_temp/glance.png">
